--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
       class="container d-flex justify-content-center align-items-center min-vh-100"
     >
       <div class="col-md-3">
-        <!-- 1/4 da largura (aproximadamente) em telas médias -->
         <h2 class="text-center mb-4">Contato</h2>
-        <form>
-          <!-- Campo de email -->
+        <form id="contactForm" novalidate>
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
             <input
@@ -28,8 +26,10 @@
               placeholder="Digite seu email"
               required
             />
+            <div class="invalid-feedback">
+              Por favor, insira um endereço de email válido.
+            </div>
           </div>
-          <!-- Campo de assunto -->
           <div class="mb-3">
             <label for="assunto" class="form-label">Assunto</label>
             <input
@@ -39,8 +39,8 @@
               placeholder="Digite o assunto"
               required
             />
+            <div class="invalid-feedback">O campo assunto é obrigatório.</div>
           </div>
-          <!-- Campo de mensagem -->
           <div class="mb-3">
             <label for="mensagem" class="form-label">Mensagem</label>
             <textarea
@@ -50,8 +50,8 @@
               placeholder="Digite sua mensagem"
               required
             ></textarea>
+            <div class="invalid-feedback">O campo mensagem é obrigatório.</div>
           </div>
-          <!-- Botões -->
           <div class="d-flex justify-content-between">
             <button type="submit" class="btn btn-primary">Enviar</button>
             <button type="reset" class="btn btn-secondary">Cancelar</button>
@@ -59,6 +59,7 @@
         </form>
       </div>
     </div>
+    <script src="js/script.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
